force-app/main/default/objects/GasolinePriceMaster__c/GasolinePriceMaster__c.object-meta.xml
<CustomObject>
    <label>燃料単価マスタ</label>
    <nameField>
        <displayFormat>GPM-{00000000}</displayFormat>
        <label>燃料単価マスタ#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>