force-app/main/default/objects/GasolinePriceMaster__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>1L軽油価格</inlineHelpText>
    <label>燃料単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>